cabal-version:      3.4
name:               haskus
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sylvain Henry
maintainer:         sylvain@haskus.fr
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -fhide-source-paths

library
    import:           warnings
    exposed-modules:
      Haskus.Arch.X86.Assembler

    -- other-modules:
    default-extensions:
        LambdaCase
      , MultiWayIf
      , DerivingStrategies
      , BinaryLiterals
    build-depends:    base ^>=4.18.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite haskus-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        haskus
